Addition of the composer to Command Center
